chore: apply OpenRewrite normalizations repo-wide
The commit-time rewriteDryRun gate flagged pre-existing drift across ten
modules (missing @Override, named catch parameters that should be unnamed,
fully-qualified names with available imports, isBlank idioms, unused
imports). Apply the tool's own mechanical fixes plus three matching PMD
idiom fixes (List#getLast, Strings.CS.startsWith/contains) so the gate
returns to green for these files. Behavior-preserving; the multi-pass
patches were applied to fixpoint per module.