@@ -1,5 +1,6 @@
 package com.claudecode.core.message;
 
+import org.apache.commons.lang3.StringUtils;
 
 
 /**
@@ -15,7 +16,7 @@ public final class PlanModeInstructions {
     private PlanModeInstructions() {}
 
     public static void configureCustomWorkflow(String workflow) {
-        customWorkflow = workflow == null || workflow.isBlank() ? null : workflow.strip();
+        customWorkflow = StringUtils.isBlank(workflow) ? null : workflow.strip();
     }
 
     static boolean hasCustomWorkflow() {
